<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/alarm_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/TextAlarmName"
        android:inputType="text" />

    <TextView
        android:id="@+id/time_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/alarm_name_edit_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/TextSelectTime"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:clickable="true"
        android:focusable="true" />

    <Button
        android:id="@+id/choose_type_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/time_text_view"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/TextChooseType" />

    <TextView
        android:id="@+id/selected_type_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/choose_type_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/TextSelectedType"
        android:textStyle="bold" />

    <Button
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/selected_type_text_view"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/TextAddAlarm" />

</RelativeLayout>
