<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/hint_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/TextMakeAGuess"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/guess_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/hint_text_view"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:hint="@string/TextEnterYourGuess"
        android:inputType="number" />

    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/guess_edit_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/TextSubmit" />

</RelativeLayout>
